--- a/individual_task_database/frontend/form.html
+++ b/individual_task_database/frontend/form.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -21,6 +20,8 @@
 
   <label for="name">Имя водителя</label>
   <input id="name" placeholder="Иванов И.И." />
+  <label>Date of Birth: <input type="date" id="date_of_birth"></label><br>
+  <input type="hidden" id="created_at_hidden"><br>
 
   <label for="categories">Категории лицензий (через запятую)</label>
   <input id="categories" placeholder="B, C" />
@@ -39,23 +40,45 @@
 
   <div>
     <button type="button" onclick="submitDriver()">Добавить / Обновить</button>
-    <button type="button" onclick="deleteDriver()">Удалить</button>
     <button type="button" onclick="clearForm()">Очистить</button>
   </div>
 
   <script>
     const apiUrl = 'http://localhost:8000';
+    const params = new URLSearchParams(window.location.search);
+    const editName = params.get("edit");
+
+    if (editName) {
+      fetch(`${apiUrl}/drivers`)
+        .then(res => res.json())
+        .then(drivers => {
+          const driver = drivers.find(d => d.name === editName);
+          if (driver) {
+            document.getElementById("name").value = driver.name;
+            document.getElementById("date_of_birth").value = driver.date_of_birth || "";
+            document.getElementById("created_at_hidden").value = driver.created_at || "";
+            document.getElementById("categories").value = driver.license_categories.join(", ");
+            document.getElementById("experience").value = driver.experience_years;
+            document.getElementById("available").value = driver.is_available.toString();
+            document.getElementById("comments").value = driver.comments || '';
+          } else {
+            alert("Водитель не найден");
+          }
+        })
+        .catch(err => {
+          console.error("Ошибка при загрузке водителей:", err);
+        });
+    }
 
     async function submitDriver() {
       const driver = {
-        name: document.getElementById("name").value.trim(),
-        license_categories: document.getElementById("categories").value
-          .split(',')
-          .map(c => c.trim())
-          .filter(c => c !== ""),
+        name: document.getElementById("name").value,
+        license_categories: document.getElementById("categories").value.split(',').map(c => c.trim()),
         experience_years: parseInt(document.getElementById("experience").value),
-        is_available: document.getElementById("available").value === 'true',
-        comments: document.getElementById("comments").value.trim()
+        is_available: document.getElementById("available").value === "true",
+        comments: document.getElementById("comments").value,
+        date_of_birth: document.getElementById("date_of_birth").value,
+        created_at: document.getElementById("created_at_hidden").value || null
       };
 
       if (!driver.name) {
@@ -67,7 +90,6 @@
         return;
       }
 
-      // Пробуем обновить (PUT)
       const resPut = await fetch(`${apiUrl}/drivers/${encodeURIComponent(driver.name)}`, {
         method: 'PUT',
         headers: { 'Content-Type': 'application/json' },
@@ -79,7 +101,6 @@
         clearForm();
         return;
       } else if (resPut.status === 404) {
-        // Если нет, создаём (POST)
         const resPost = await fetch(`${apiUrl}/drivers`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
@@ -96,33 +117,13 @@
       }
     }
 
-    async function deleteDriver() {
-      const name = document.getElementById("name").value.trim();
-      if (!name) {
-        alert('Введите имя водителя для удаления');
-        return;
-      }
-
-      if (!confirm(`Удалить водителя "${name}"?`)) return;
-
-      const res = await fetch(`${apiUrl}/drivers/${encodeURIComponent(name)}`, {
-        method: 'DELETE'
-      });
-
-      if (res.ok) {
-        alert('Водитель удален');
-        clearForm();
-      } else {
-        alert('Ошибка при удалении водителя');
-      }
-    }
-
     function clearForm() {
       document.getElementById("name").value = '';
       document.getElementById("categories").value = '';
       document.getElementById("experience").value = '';
       document.getElementById("available").value = 'true';
       document.getElementById("comments").value = '';
+      document.getElementById("date_of_birth").value = '';
     }
   </script>
 </body>
