--- a/individual_task_DS/frontend/service_search.html
+++ b/individual_task_DS/frontend/service_search.html
@@ -16,7 +16,6 @@
     const resultsDiv = document.getElementById("results");
 
     document.getElementById("btnSearch").addEventListener("click", searchService);
-    // и Enter в поле
     document.getElementById("query").addEventListener("keydown", (e) => {
       if (e.key === "Enter") searchService();
     });
@@ -47,7 +46,6 @@
       }
       resultsDiv.innerHTML = "";
       cars.forEach(car => {
-        // отфильтруем эпизоды ТО, которые содержат q
         const eps = (car.service_history || []).filter(ep => {
         const hay = [
             ep.description || "",
@@ -58,7 +56,7 @@
           ].join(" ").toLowerCase();
           return hay.includes(q.toLowerCase());
         });
-        if (eps.length === 0) return; // если по машине нет эпизодов — пропускаем
+        if (eps.length === 0) return;
         let html = `<h3>${escapeHtml(car.name)} (${escapeHtml(car.license_plate)})</h3>`;
         html += `<table border="1"><tr><th>Дата</th><th>Описание</th><th>Детали</th><th>Пробег</th><th>Стоимость</th></tr>`;
         eps.forEach(ep => {
@@ -82,3 +80,4 @@
   </script>
 </body>
 </html>
+
